Updated user abstraction layer, and Punishment fields to match database entity
User changes:
- AbstractUser was replaced by Operator and Punishable interfaces
- added PlayerFactory for accessing to relevant information from platform players
- added StoredUser to match database entity, it might be removed in the future if User implementation is updated